# hassad-erp-main

./: .env.example  .gitignore  CHANGELOG_F2.3.md  LAUNCH_GUIDE.md  PHASE_B_COMPLETION_REPORT.md  PHASE_C_VALIDATION_REPORT.md  README.md  SETUP_GUIDE.md  alembic.ini  chat warp.md  check_db.py  check_sessions.py  generate_ui_scaffolds.py  launch.bat  main.py  navigation.json  phase_c_validator.py  pyproject.toml  requirements.txt  test_auth_fixed.py  test_login.py  ui_flow.json  ui_flow_map.json  validate_patches.py  validate_patches_direct.py
api/: __init__.py
backups/: main_window.20251106_101009.bak.py
changelog/: phase_b_resume.md
core/: __init__.py  auth.py  config.py  database.py  db_utils.py  permissions.py  session_manager.py
docs/: API_CONVENTIONS.md  DATABASE_SCHEMA.md  DEVELOPMENT_GUIDE.md  PHASE_F1_UI_FLOW_ANALYSIS.md  PHASE_F2_4_COMPLETION_REPORT.md  PHASE_F2_4_TESTING_GUIDE.md  PHASE_F2_4_USER_FLOW.md  PHASE_F2_5_DASHBOARD_ANALYTICS.md
integrations/: __init__.py  barcode_adapter.py  escpos_adapter.py  supplier_adapter.py
migrations/: env.py
models/: __init__.py  accounting.py  audit_log.py  base.py  branch.py  company.py  inventory.py  permission.py  pos.py  purchases.py  role.py  session_log.py  settings.py  user.py
scripts/: batch_generate_services.py  complete_phase_d_services.py  create_db.py  create_test_db.ps1  create_test_db.sh  diagnose_ui_routing.py  format_and_lint.ps1  format_and_lint.sh  generate_all_service_tests.py  generate_services.py  generate_ui_analysis_report.py  generate_ui_scaffolds.py  integrate_ui_services.py  (+12 more)
(+169 files in other folders)
